# ugc_assignment

./: .dockerignore  .env_example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  async_runner.py  docekr-compose.prod.yml  docker-compose.elk.yml  docker-compose.prod.yml  docker-compose.yml  mypy.ini  pyproject.toml  setup.cfg
.github/workflows/: python.yml
Dockerfiles/etl_events/: Dockerfile
Dockerfiles/ugc_service/: Dockerfile
Docs/architecture/: diagram_ngnx_to_be.puml
architecture/: diagram_as_is.puml  diagram_nginx_as_is.puml  diagram_to_be.puml
clickhouse/scripts/: init-db-shard1.sh  init-db-shard2.sh
elk/: logstash.conf
etl_events/: .dockerignore  __main__.py  config.py  main.py  pyproject.toml  requirements.txt
etl_events/core/: config.py  logger.py
etl_events/db/: clickhouse.py  consumer.py
etl_events/services/: services.py
mongo_test/: README.md  docker-compose.yml  test.ipynb
mongo_test/data/: likes_cl.csv
nginx/: default.conf  nginx.conf
services/etl/: __main__.py
services/etl/core/: config.py  logger.py
services/etl/db/: clickhouse.py  consumer.py
services/etl/services/: services.py
services/ugc_service/: __init__.py  __main__.py
services/ugc_service/api/v1/: ugc.py
services/ugc_service/core/: config.py
services/ugc_service/db/: producer.py
services/ugc_service/models/: base.py
services/ugc_service/services/: base_service.py  jwt_utils.py  kafka_utils.py  sentry_service.py
tests/: docker-compose.yml  my_kafka.py  toCH.ipynb
tests/fucntional/: conftest.py  settings.py
tests/functional/: conftest.py  settings.py
tests/functional/src/: kafka_endpoint_test.py
tests/mongo_test/: generate_data.ipynb  test.ipynb
tests/mongo_test/data/: likes_rt.csv
tests/stress_load/: test.ipynb
tests/unit/: my_test.py
ugc_service/: __init__.py  __main__.py  requirements.txt
ugc_service/api/v1/: event.py  ugc.py
ugc_service/core/: config.py  logger.py
ugc_service/db/: storage.py
ugc_service/models/: base.py  kafka.py
ugc_service/serializers/: __init__.py  base.py  kafka.py
ugc_service/services/: base_service.py  events.py  jwt_utils.py  kafka_unit_producer.py  sentry_service.py
