[tool.poetry]
name = "ugc_service"
version = "0.1.0"
description = "UGC service "
authors = ["DmitryK , IMegaMaan , MENERGO "]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.17.6"
fastapi = "^0.75.2"
PyJWT = "^2.3.0"
orjson = "^3.6.8"
kafka-python = "2.0.2"
clickhouse-driver = "^0.2.3"
aiohttp = "^3.8.1"
aiochclient = "^2.1.0"
backoff = "^1.11.1"
jupyter = "^1.0.0"
confluent-kafka = "^1.8.2"


[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-asyncio = "^0.18.2"
uuid = "^1.30"
aiokafka = "^0.7.2"
flake8 = "^4.0.1"
isort = "^5.10.1"


[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | venv
  | build
  | dist
)/
'''


[tool.isort]
profile = "black"
multi_line_output = 3


[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
pretty = true

[[tool.mypy.overrides]]
module = "*.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true


[tool.pylint.messages_control]
max-line-length = 88
disable = [
    "missing-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "global-statement",
]

ignored-modules = ["pydantic"]
good-names = []

[tool.pylint.similarities]
ignore-imports = true
ignore-docstrings = true
ignore-comments = true


[tool.pytest.ini_options]
asyncio_mode= "strict"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(levelname)-5.5s [%(name)s] %(message)s"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
