[tool.poetry]
name = "etl_events"
version = "0.1.0"
description = ""
authors = ["DmitryK , IMegaMaan , MENERGO "]

[tool.poetry.dependencies]
python = "^3.8"
kafka-python = "2.0.2"
clickhouse-driver = "^0.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
